cart swagger done and also some fixes in cart
